# ReadingNotes

./: .gitignore  README.md
Basic/: limits.cpp  usepoint.cpp
Template/Template/: Template.1  main.cpp  max.h  max2.h
TestADO/: TestADO.sln  TestADO.sln.GhostDoc.xml
TestADO/TestADO/: Source.cpp  TestADO.vcxproj  TestADO.vcxproj.GhostDoc.xml
TestClang/: test.bc
TestODBC/: TestODBC.sln
TestODBC/TestODBC/: Source.cpp  Source1.cpp  TestODBC.vcxproj
TestSocket/: TestSocket.sln
TestSocket/TestSocket/: TcpClient.cpp  TcpServer.cpp  TestSocket.vcxproj  TestSocket.vcxproj.filters  Udp.cpp
Thread/: Thread.sln
Thread/Thread/: Source.cpp  Thread.vcxproj
Tools/: Tools.sln
Tools/Tools/: Source.cpp  Tools.vcxproj  Tools.vcxproj.GhostDoc.xml  Tools.vcxproj.filters  plog.cpp  plog.h
cp/: ch02  ch02.md  ch07.md  ch7.md
cpp_concurrency_in_action/: CMakeLists.txt  README.md  condition_variable_example.h  hierarchical_mutex.h  main.cc  parallel_accumulate.h  threadsafe_map.h  threadsafe_queue.h  threadsafe_stack.h  threadsafe_swap.h
js/: index.html  object.js
learningOpenCV/: 01-Exercises.md  01-Overview.md  02-Introduction-to-OpenCV.md  03-Getting-to-Know-OpenCV-Data-Types.md  Preface.md
open.gl/: README.md
open.gl/Exercise/: Exercise.sln  debug.cpp
open.gl/Exercise/01/: 01.vcxproj  main.cpp
open.gl/Exercise/02/: 02.vcxproj  main.cpp
open.gl/Exercise/03/: 03.vcxproj  main.cpp
open.gl/Exercise/11/: 11.vcxproj  main.cpp
open.gl/Exercise/12/: 12.vcxproj  main.cpp
tdd_py/: note.md
tdd_py/superlists/: functional_tests.py
(+12 files in other folders)
